2019-01-27  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* spc_pdfm.c: Supress warning on tounicode special.
	Dvipdfmx had been giving a wrong warning when an optional
	argument to tounicode special is not supplied.

2018-12-27  Clerk Ma  <maqiyuan130324@vip.qq.com>

	* pdfobj.c: Introduce a static variable pdf_output_file_stats
	for LIBDPX. It does not affect (x)dvipdfmx.

2018-12-21  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvi.[ch], dvipdfmx.c, pdfdoc.[ch], pdfencrypt.[ch],
	spc_pdfm.c: Add a new special pdf:trailerid for directly
	specifying trailer ID.
	* spc_tpic.c, tfm.c, tt_gsub.c: Avoid compiler warning.
	* configure.ac: Version 20181221.

2018-10-12  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvipdfmx.c: Fix a bug that landscape option is not handled
	properly.
	* configure.ac: Version 20181012.

2018-10-08  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* mpost.c: Fix a bug in inline PS code handling.
	* dpxfile.c, pdfencrypt.c, type0.c: Avoid compiler warnings.
	* pdfobj.c: Fix a bug in (unused) TIFF predictor code.
	* configure.ac: Version 20181008.

2018-10-07  Simon Cozens  <simon@simon-cozens.org>

	* pdfobj.c: Clear static variables to allow PDF funcfions to
	be used more than once.

2018-10-02  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvipdfmx.c: Fixed a bug in handling of command line option '-M'.
	* mpost.c:  Fixed a bug in MetaPost generated PS files.
	Font selection had not been properly done for gsave/grestore.
	* configure.ac: Version 20181002.

2018-09-16  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvi.[ch], dvipdfmx.c: Fixed a bug that papersize special does
	not work (introduced in the previous change). Command line
	options other than papersize now take precedence over special
	command options.
	* dpxconf.[ch], tt_aux.c: Moved always_embed flag to dpx_conf.
	* pdfencrypt.c: Fixed a bug that calculation of encryption key
	was not done properly for RC4 and revision 2-3 AES security.
