@@ -1,3 +1,7 @@
+2019-02-10  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* cidtype0.c, cidtype2.c: Fix typo.
+
 2019-01-27  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
 
 	* spc_pdfm.c: Supress warning on tounicode special.
